-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 13, 15
-
Component/s: hotspot
-
b27
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8250512 | 11.0.10-oracle | Vladimir Kozlov | P4 | Resolved | Fixed | b01 |
| JDK-8252747 | 11.0.10 | Vladimir Kozlov | P4 | Resolved | Fixed | b01 |
compiler/uncommontrap/Test8009761.java
Here's a snippet of the log file:
#section:main
----------messages:(5/865)----------
command: main -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:-UseOnStackReplacement -XX:-BackgroundCompilation -Xss512K -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockExperimentalVMOptions -XX:+EagerJVMCI -XX:CompileCommand=exclude,compiler.uncommontrap.Test8009761::m2 compiler.uncommontrap.Test8009761
reason: User specified action: run main/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:-UseOnStackReplacement -XX:-BackgroundCompilation -Xss512K -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockExperimentalVMOptions -XX:+EagerJVMCI -XX:CompileCommand=exclude,compiler.uncommontrap.Test8009761::m2 compiler.uncommontrap.Test8009761
Mode: othervm [/othervm specified]
Additional options from @modules: --add-modules java.base --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
elapsed time (seconds): 34.802
----------configuration:(4/111)----------
Boot Layer
add modules: java.base
add exports: java.base/jdk.internal.misc ALL-UNNAMED
----------System.out:(5/349)----------
CompileCommand: exclude compiler/uncommontrap/Test8009761.m2
WB error: failed to blocking compile at level 4 method compiler.uncommontrap.Test8009761::m3
WB error: blocking compilation is still in queue!
WB error: failed to blocking compile at level 1 method compiler.uncommontrap.Test8009761::m3
WB error: blocking compilation is still in queue!
----------System.err:(13/1031)----------
java.lang.RuntimeException: static java.lang.Object compiler.uncommontrap.Test8009761.m3(boolean,boolean) not compiled
at compiler.uncommontrap.Test8009761.main(Test8009761.java:272)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:567)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:830)
JavaTest Message: Test threw exception: java.lang.RuntimeException: static java.lang.Object compiler.uncommontrap.Test8009761.m3(boolean,boolean) not compiled
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: static java.lang.Object compiler.uncommontrap.Test8009761.m3(boolean,boolean) not compiled
----------rerun:(53/7434)*----------
- backported by
-
JDK-8250512 [Graal] Test8009761.java fails due to "RuntimeException: static java.lang.Object compiler.uncommontrap.Test8009761.m3(boolean,boolean) not compiled"
-
- Resolved
-
-
JDK-8252747 [Graal] Test8009761.java fails due to "RuntimeException: static java.lang.Object compiler.uncommontrap.Test8009761.m3(boolean,boolean) not compiled"
-
- Resolved
-
- duplicates
-
JDK-8233681 [Graal] compiler/gcbarriers/EqvUncastStepOverBarrier.java test fails with 'java.lang.RuntimeException: Method compilation failed'
-
- Closed
-
- relates to
-
JDK-8233681 [Graal] compiler/gcbarriers/EqvUncastStepOverBarrier.java test fails with 'java.lang.RuntimeException: Method compilation failed'
-
- Closed
-