8227647: [Graal] Test8009761.java fails due to "RuntimeException: static java.lang.Object compiler.uncommontrap.Test8009761.m3(boolean,boolean) not compiled"

Wait Graal compilation to finish if request came from testing environment.

Reviewed-by: thartmann, iignatyev